--- a/test/interaction/Long.in
+++ b/test/interaction/Long.in
@@ -1,6 +1,6 @@
-top_command (cmd_write_highlighting_info [] currentFile "/dev/null")
+top_command (cmd_write_highlighting_info [] currentFile "./highlighting.tmp")
 top_command (cmd_load currentFile [])
-top_command (cmd_write_highlighting_info [] currentFile "/dev/null")
+top_command (cmd_write_highlighting_info [] currentFile "./highlighting.tmp")
 top_command (cmd_compile currentFile [])
 top_command cmd_constraints
 top_command (cmd_load currentFile [])
