Allow 'syntax' declarations of the form
syntax plus x y = y + x

* lexer is extended with keyword 'syntax'
* parser extended
* notation information is propagated in the renamer as fixities
* operator parser changed to use the new format of declarations

The idea is that this notation can in the future be extended
to declare mixfix binders.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -124,6 +124,7 @@ library
                     Agda.Syntax.Internal.Generic
                     Agda.Syntax.Internal.Pattern
                     Agda.Syntax.Literal
+                    Agda.Syntax.Notation
                     Agda.Syntax.Parser.Alex
                     Agda.Syntax.Parser.Comments
                     Agda.Syntax.Parser.Layout
