resurrected the agda-pkg code   - it's easier for someone to work on it if they don't have     to dig through the repository history to find the code
rolling back:

Sun Sep 12 02:21:45 CEST 2010  Nils Anders Danielsson <nils.anders.danielsson@gmail.com>
  * Made Agda build using GHC 6.10. Removed agda-pkg.
  + agda-pkg can be brought back later, if someone finishes it.

    R ./src/pkg/Interface/Command.hs
    R ./src/pkg/Interface/Command/Describe.hs
    R ./src/pkg/Interface/Command/Dump.hs
    R ./src/pkg/Interface/Command/Field.hs
    R ./src/pkg/Interface/Command/List.hs
    R ./src/pkg/Interface/Command/Register.hs
    R ./src/pkg/Interface/Command/Unregister.hs
    R ./src/pkg/Interface/Command/Visibility.hs
    R ./src/pkg/Interface/Command/
    R ./src/pkg/Interface/Exit.hs
    R ./src/pkg/Interface/Options.hs
    R ./src/pkg/Interface/Usage.hs
    R ./src/pkg/Interface/Version.hs
    R ./src/pkg/Interface/
    R ./src/pkg/Main.hs
    R ./src/pkg/TODO
    R ./src/pkg/Utils.hs
    R ./src/pkg/
    R ./src/full/Agda/Packaging/Config.hs
    R ./src/full/Agda/Packaging/Database.hs
    R ./src/full/Agda/Packaging/Monad.hs
    R ./src/full/Agda/Packaging/Types.hs
    R ./src/full/Agda/Packaging/
    M ./Agda.cabal -43

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -88,6 +88,10 @@ library
                     Agda.Compiler.MAlonzo.Misc
                     Agda.Compiler.MAlonzo.Pretty
                     Agda.Compiler.MAlonzo.Primitives
+                    Agda.Packaging.Config
+                    Agda.Packaging.Database
+                    Agda.Packaging.Monad
+                    Agda.Packaging.Types
                     Agda.Interaction.CommandLine.CommandLine
                     Agda.Interaction.Exceptions
                     Agda.Interaction.FindFile
