Deactivated annoying failed test Impossible.agda.

--- a/test/fail/Makefile
+++ b/test/fail/Makefile
@@ -26,7 +26,11 @@ agda=$(AGDA_BIN) $(AGDA_TEST_FLAGS)
 V = 0
 
 # Getting all agda files
-allagda=$(shell find . -name '*.agda' -o \( -name Imports -o -name customised \) -prune -a -name '*agda')
+# Andreas 2010-09-24 skip over annoying Impossible.agde 
+# which always changes error message because it mentions a line number in a 
+# Agda source file
+excluded=./Impossible.agda
+allagda=$(filter-out $(excluded),$(shell find . -name '*.agda' -o \( -name Imports -o -name customised \) -prune -a -name '*agda'))
 allstems=$(patsubst %.agda,%,$(allagda))
 allout=$(patsubst %.agda,%.err,$(allagda))
 
