Preparation for release.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -1,5 +1,5 @@
 name:            Agda
-version:         2.2.7
+version:         2.2.8
 cabal-version:   >= 1.8 && < 2
 build-type:      Simple
 license:         OtherLicense
@@ -45,6 +45,11 @@ data-files:         Agda.css
 source-repository head
   type:     darcs
   location: http://code.haskell.org/Agda/
+
+source-repository this
+  type:     darcs
+  location: http://code.haskell.org/Agda/
+  tag:      2.2.8
 
 flag use-locale
   description:
