move the __IMPOSSIBLE__ triggered by the impossible failing test to a separate file   to prevent the line number in the error message from changing

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -80,6 +80,7 @@ library
                     alex >= 2.0.1 && < 3
   extensions:       CPP
   exposed-modules:  Agda.Main
+                    Agda.ImpossibleTest
                     Agda.Interaction.BasicOps
                     Agda.Interaction.GhciTop
                     Agda.Compiler.HaskellTypes
