--- a/Agda.cabal
+++ b/Agda.cabal
@@ -55,7 +55,7 @@ flag use-locale
 library
   hs-source-dirs:   src/full
   if flag(use-locale)
-    build-depends:  base == 4.2.*
+    build-depends:  base >= 4.2 && < 4.4
   else
     build-depends:  base == 4.1.*,
                     utf8-string == 0.3.*
@@ -74,8 +74,7 @@ library
                     process >= 1.0.1.0 && < 2,
                     haskeline >= 0.3 && < 0.7,
                     xhtml == 3000.2.*,
-                    syb == 0.1.*,
-                    Cabal >= 1.8.0.2 && < 1.9
+                    syb >= 0.1 && < 0.3
   build-tools:      happy >= 1.15 && < 2,
                     alex >= 2.0.1 && < 3
   extensions:       CPP
@@ -281,7 +280,7 @@ executable agda-mode
   main-is:          Main.hs
   other-modules:    Paths_Agda
   if flag(use-locale)
-    build-depends:  base == 4.2.*
+    build-depends:  base >= 4.2 && < 4.4
   else
     build-depends:  base == 4.1.*,
                     utf8-string == 0.3.*
