Made fix-agda-whitespace compile with GHC 7.0.1.

--- a/src/fix-agda-whitespace/fix-agda-whitespace.cabal
+++ b/src/fix-agda-whitespace/fix-agda-whitespace.cabal
@@ -3,11 +3,11 @@ version:         0.0
 cabal-version:   >= 1.8
 build-type:      Simple
 description:     Fixes whitespace issues for Agda sources.
-tested-with:     GHC == 6.12.3
+tested-with:     GHC == 6.12.3, GHC == 7.0.1
 
 executable fix-agda-whitespace
   hs-source-dirs:   .
   main-is:          FixWhitespace.hs
-  build-depends:    base == 4.2.*,
+  build-depends:    base >= 4.2 && < 4.4,
                     filemanip == 0.3.*,
                     text == 0.10.*
