--- a/Agda.cabal
+++ b/Agda.cabal
@@ -77,7 +77,8 @@ library
                     process >= 1.0.1.0 && < 2,
                     haskeline >= 0.6.3.2 && < 0.7,
                     xhtml == 3000.2.*,
-                    syb >= 0.1 && < 0.3
+                    syb >= 0.1 && < 0.3,
+                    epic >= 0.1.7 && < 0.2
   build-tools:      happy >= 1.15 && < 2,
                     alex >= 2.0.1 && < 3
   extensions:       CPP
