--- a/Agda.cabal
+++ b/Agda.cabal
@@ -55,6 +55,11 @@ flag use-locale
     of the IO going to/from stdin and stdout. (Note that source files
     must always be encoded using UTF8.)
 
+flag use-epic
+  default: False
+  description:
+    Install the dependencies used by the epic backend.
+
 library
   hs-source-dirs:   src/full
   if flag(use-locale)
@@ -62,6 +67,8 @@ library
   else
     build-depends:  base == 4.1.*,
                     utf8-string == 0.3.*
+  if flag(use-epic)
+    build-depends:  epic >= 0.1.7 && < 0.2
   build-depends:    mtl == 2.0.*,
                     QuickCheck >= 2.3 && < 2.5,
                     haskell-src-exts >= 1.9.6 && < 1.10,
@@ -77,8 +84,7 @@ library
                     process >= 1.0.1.0 && < 2,
                     haskeline >= 0.6.3.2 && < 0.7,
                     xhtml == 3000.2.*,
-                    syb >= 0.1 && < 0.3,
-                    epic >= 0.1.7 && < 0.2
+                    syb >= 0.1 && < 0.3
   build-tools:      happy >= 1.15 && < 2,
                     alex >= 2.0.1 && < 3
   extensions:       CPP
