--- a/Agda.cabal
+++ b/Agda.cabal
@@ -100,6 +100,7 @@ library
                     Agda.Compiler.Epic.ConstructorIrrelevancy
                     Agda.Compiler.Epic.Erasure
                     Agda.Compiler.Epic.Epic
+                    Agda.Compiler.Epic.Forcing
                     Agda.Compiler.Epic.FromAgda
                     Agda.Compiler.Epic.LambdaLift
                     Agda.Compiler.Epic.NatDetection
