moved the FFI failing test to customized to make it go through ok

--- a/.darcsignore
+++ b/.darcsignore
@@ -67,3 +67,4 @@ src/prototyping/terms/(dist|term)$
 examples/compiler/MAlonzo$
 test/succeed/Epic$
 examples/compiler/main$
+test/fail/customised/MAlonzo
