--- a/.darcsignore
+++ b/.darcsignore
@@ -67,4 +67,5 @@ src/prototyping/terms/(dist|term)$
 examples/compiler/MAlonzo$
 test/succeed/Epic$
 examples/compiler/main$
-test/fail/customised/MAlonzo
+test/fail/customised/MAlonzo$
+examples/compiler/Epic$
