--- a/test/interaction/Issue373.in
+++ b/test/interaction/Issue373.in
@@ -5,7 +5,7 @@ let objectFile = "Imports/Nat.o"
 ex <- System.Directory.doesFileExist objectFile
 if ex then System.Directory.removeFile objectFile else return ()
 
-top_command (cmd_compile currentFile [])
+top_command (cmd_compile MAlonzo currentFile [])
 
 let binary = "." </> dropExtension currentFile
 runProcess binary [] Nothing Nothing Nothing Nothing Nothing
