Benchmarked another parser combinator library.

--- a/src/prototyping/mixfix/benchmarks/mixfix-benchmarks.cabal
+++ b/src/prototyping/mixfix/benchmarks/mixfix-benchmarks.cabal
@@ -12,4 +12,5 @@ executable mixfix-benchmarks
                     mtl == 2.0.*,
                     fgl == 5.4.*,
                     containers == 0.4.*,
-                    ghc-prim == 0.2.*
+                    ghc-prim == 0.2.*,
+                    incremental-parser == 0.1.*
