Started to implement level irrelevance for universe-polymorphism. Does not work well in practice yet, need to switch to new uni.poly. Moved irrelevance stuff to new file Agda.TypeChecking.Irrelevance. Added a Relevance state NonStrict. Adjusted the debug print levels in Conversion. (They were too low...)

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -189,6 +189,7 @@ library
                     Agda.TypeChecking.Forcing
                     Agda.TypeChecking.Implicit
                     Agda.TypeChecking.Injectivity
+                    Agda.TypeChecking.Irrelevance
                     Agda.TypeChecking.Level
                     Agda.TypeChecking.MetaVars
                     Agda.TypeChecking.MetaVars.Occurs
