--- a/Agda.cabal
+++ b/Agda.cabal
@@ -73,16 +73,16 @@ library
   build-depends:    mtl == 2.0.*,
                     QuickCheck >= 2.3 && < 2.5,
                     haskell-src-exts >= 1.9.6 && < 1.12,
-                    containers >= 0.1.0 && < 1,
-                    pretty >= 1 && < 2,
+                    containers >= 0.1 && < 0.5,
+                    pretty == 1.0.*,
                     directory >= 1.0 && < 1.2,
-                    old-time >= 1 && < 2,
-                    bytestring >= 0.9.0.1 && < 1,
-                    array >= 0.1 && < 1,
+                    old-time == 1.0.*,
+                    bytestring >= 0.9.0.1 && < 0.10,
+                    array >= 0.1 && < 0.4,
                     binary >= 0.4.4 && < 0.6,
-                    zlib >= 0.4.0.1 && < 1,
-                    filepath >= 1.1 && < 2,
-                    process >= 1.0.1.0 && < 2,
+                    zlib >= 0.4.0.1 && < 0.6,
+                    filepath >= 1.1 && < 1.3,
+                    process >= 1.0.1.0 && < 1.1,
                     haskeline >= 0.6.3.2 && < 0.7,
                     xhtml == 3000.2.*,
                     syb >= 0.1 && < 0.4
@@ -309,6 +309,6 @@ executable agda-mode
   else
     build-depends:  base == 4.1.*,
                     utf8-string == 0.3.*
-  build-depends:    filepath >= 1.1 && < 2,
-                    process >= 1.0.1.0 && < 2,
+  build-depends:    filepath >= 1.1 && < 1.3,
+                    process >= 1.0.1.0 && < 1.1,
                     directory >= 1.0 && < 1.2
