Switched to a different implementation of hashtables in the serialiser. + The monad/Monad.agda benchmark takes about half as long to typecheck   now (with all imports already typechecked), and uses about two   thirds of the memory it used to (maximum residency).

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -91,6 +91,8 @@ library
                     process >= 1.0.1.0 && < 1.1,
                     haskeline >= 0.6.3.2 && < 0.7,
                     xhtml == 3000.2.*,
+                    hashable == 1.1.*,
+                    hashtables == 1.0.*,
                     syb >= 0.1 && < 0.4
   build-tools:      happy >= 1.15 && < 2,
                     alex >= 2.0.1 && < 3
