--- a/src/hTags/hTags.cabal
+++ b/src/hTags/hTags.cabal
@@ -3,18 +3,18 @@ version: 0.1.1
 cabal-version: >= 1.2 && < 2
 author: Ulf Norell, Nils Anders Danielsson
 build-type: Simple
-tested-with: GHC == 6.12.3, GHC == 7.0.4
+tested-with: GHC == 6.12.3, GHC == 7.2.1
 
 executable hTags
   main-is:       Main.hs
   if impl(ghc == 6.12.*)
     build-depends: ghc == 6.12.*
   if impl(ghc >= 7.0)
-    build-depends: ghc == 7.0.*
-  build-depends: base >= 4.2 && < 4.4,
+    build-depends: ghc >= 7.0 && < 7.3
+  build-depends: base >= 4.2 && < 4.5,
                  filepath >= 1.1 && < 1.3,
                  directory >= 1 && < 1.2,
-                 process >= 1 && < 1.1,
+                 process >= 1 && < 1.2,
                  containers >= 0.1 && < 0.5,
                  mtl >= 1 && < 2.1
   ghc-options:   -fwarn-incomplete-patterns -O
