--- a/Agda.cabal
+++ b/Agda.cabal
@@ -95,7 +95,7 @@ library
                     hashtables == 1.0.*,
                     syb >= 0.1 && < 0.4
   build-tools:      happy >= 1.15 && < 2,
-                    alex >= 2.0.1 && < 3
+                    alex >= 2.3.1 && <= 2.3.5
   extensions:       CPP
   exposed-modules:  Agda.Main
                     Agda.ImpossibleTest
