--- a/examples/Makefile
+++ b/examples/Makefile
@@ -14,7 +14,13 @@ test_files = Vec.agda Lookup.agda Binary.agda Setoid.agda \
 			 TT.agda ISWIM.agda ParenDepTac.agda \
 			 AIM5/Hedberg/SET.agda AIM5/yoshiki/SET.agda \
 			 SimpleTypes.agda Monad.agda Miller/Pat.agda \
-       syntax/Literate.lagda Termination/StreamEating.agda
+       syntax/Literate.lagda Termination/StreamEating.agda \
+	instance-arguments/01-arguments.agda \
+	instance-arguments/02-classes-indep.agda \
+	instance-arguments/04-equality.agda \
+	instance-arguments/06-listEquality.agda \
+	instance-arguments/08-higherOrder.agda \
+	instance-arguments/14-implicitConfigurations.agda
 tests	   = $(patsubst %,%.test,$(test_files))
 
 echo = $(shell which echo)
