--- a/src/hTags/hTags.cabal
+++ b/src/hTags/hTags.cabal
@@ -3,7 +3,7 @@ version: 0.1.1
 cabal-version: >= 1.2 && < 2
 author: Ulf Norell, Nils Anders Danielsson
 build-type: Simple
-tested-with: GHC == 6.12.3, GHC == 7.2.1
+tested-with: GHC == 7.2.1
 
 executable hTags
   main-is:       Main.hs
