--- a/src/main/Agda-executable.cabal
+++ b/src/main/Agda-executable.cabal
@@ -14,7 +14,7 @@ description:
   This package provides a command-line program for type-checking and
   compiling Agda programs. The program can also generate hyperlinked,
   highlighted HTML files from Agda sources.
-tested-with:     GHC == 6.12.3, GHC == 7.2.1
+tested-with:     GHC == 7.2.1
 
 source-repository head
   type:     darcs
