added Agda.Utils.VarSet   - profiling revealed free variable computation to be a bottle neck, so     I extracted the set of variable functionality into a new module to make     it easy to swap out. In the process I changed a Set.map to a     Set.mapMonotonic (when lowering the free variables under a binder), which     resulted in a 15% speed up for the standard library.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -260,6 +260,7 @@ library
                     Agda.TypeChecking.Tests
                     Agda.TypeChecking.UniversePolymorphism
                     Agda.TypeChecking.With
+                    Agda.Utils.VarSet
                     Agda.Utils.Char
                     Agda.Utils.Either
                     Agda.Utils.FileName
