--- a/test/succeed/Makefile
+++ b/test/succeed/Makefile
@@ -25,7 +25,9 @@ RUN_AGDA = $(AGDA_BIN) -i. -i.. --vim $(AGDA_TEST_FLAGS) -v$(V) $(shell if [ -e 
 cleanup_Issue296							= rm -rf MAlonzo Issue296
 cleanup_Issue326							= rm -rf MAlonzo Issue326
 cleanup_UniversePolymorphicIO = rm -rf MAlonzo UniversePolymorphicIO
+cleanup_CompilingCoinduction	= rm -rf MAlonzo CompilingCoinduction
 
+check_CompilingCoinduction = ./checkOutput ./CompilingCoinduction a
 check_UniversePolymorphicIO = ./checkOutput ./UniversePolymorphicIO ok
 
 %.test : %.agda
