--- a/Agda.cabal
+++ b/Agda.cabal
@@ -210,6 +210,7 @@ library
                     Agda.TypeChecking.Level
                     Agda.TypeChecking.LevelConstraints
                     Agda.TypeChecking.MetaVars
+                    Agda.TypeChecking.MetaVars.Mention
                     Agda.TypeChecking.MetaVars.Occurs
                     Agda.TypeChecking.Monad.Base
                     Agda.TypeChecking.Monad.Builtin
