HasOneConstructor New constraint to check whether a type has exactly one matching constructor.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -238,6 +238,7 @@ library
                     Agda.TypeChecking.Monad.Statistics
                     Agda.TypeChecking.Monad.Trace
                     Agda.TypeChecking.Monad
+                    Agda.TypeChecking.OneConstructor
                     Agda.TypeChecking.Patterns.Match
                     Agda.TypeChecking.Polarity
                     Agda.TypeChecking.Positivity
